Changed GetFirst, GetLast, RemoveLast methods, because they were not working with cmd